WIP: Local optimizations and cleanup