@@ -1,6 +1,6 @@
 # ChucK-Java (JDK 25 Migration)
 
-## Progress Update (2026-04-14)
+## Progress Update (2026-04-16)
 
 ### Integration Test Coverage
 
@@ -13,14 +13,14 @@
 | **05-Global** | 52 | 51 | 77.ck fails: `me.dir(3)` requires 3-level path depth (test dir only 2 levels deep) |
 | **06-Errors** | 109 | 42 | Error handling and type-checking edge cases |
 | **07-Imports** | 9 | 9 ✅ | `#include` / machine imports |
-| **MidiNativeTest** | 7 | 7 ✅ | Native RtMidi bindings, port discovery, sysex, and timestamps |
+| **MidiNativeTest** | 7 | 7 ✅ | Native RtMidiJava bindings, port discovery, sysex, and timestamps |
 | **Total** | **524** | **441 (84%)** | |
 
 ### Recent Enhancements (Pro MIDI & Audio)
 
 | Feature | Description | Status |
 |---|-----|--------|
-| **Native RtMidi** | Low-latency native drivers (ASIO, CoreMIDI, ALSA, JACK) via Project Panama. | ✅ Fixed |
+| **Native RtMidiJava** | Zero-setup, zero-GC native drivers via FFM API. | ✅ New |
 | **MidiPoly** | High-level automatic voice management for polyphonic MIDI instruments. | ✅ New |
 | **MIDI Learn** | Persistent MIDI mapping for global variables (saves to preferences). | ✅ Enhanced |
 | **MIDI Recorder** | One-click "REC" button to capture all MIDI to timestamped files. | ✅ New |
@@ -36,7 +36,8 @@
 ### New Features
 
 #### 🎹 Advanced MIDI & Musician Features
-- **Native RtMidi Support**: Low-latency native MIDI drivers via Project Panama (ASIO, CoreMIDI, ALSA, JACK). Replaces the 1ms polling loop with a true native callback model.
+- **Native RtMidiJava Support**: Ultra-low latency MIDI drivers via pure Java FFM (Panama). No native libraries to compile or install. Supports Windows (WinMM), macOS (CoreMIDI), and Linux (ALSA/JACK).
+- **Zero-GC Performance**: Optimized MIDI hot-path ensures no Java heap allocations during real-time MIDI processing.
 - **Native Port Sharing**: Run multiple `MidiIn` and `MidiOut` objects on the same physical hardware port safely (prevents "Device Busy" errors).
 - **`MidiPoly`**: Automatic high-level voice management. Map MIDI to STK instruments or custom UGens with zero manual sporking. Supports instrument selection, voice stealing, polyphonic pools, and custom microtonal tuning maps (`tuning(float[])`). Supports direct connections: `MidiIn min => MidiPoly poly;`.
 - **`MidiPlayer`**: A high-level MIDI sequencer. Load a `MidiFileIn`, connect it to an instrument (`player => poly`), and call `player.play()` for automatic, sample-accurate playback.
@@ -57,30 +58,15 @@
 - **Project Loom Concurrency**: Uses Java Virtual Threads for shreds, allowing thousands of simultaneous oscillators and logic processes with minimal memory overhead.
 - **SIMD Audio Kernel**: Optimized Vector API paths for common UGen operations, utilizing modern CPU instructions for high-density synthesis.
 
-#### 🌐 Network Audio & 3D Spatialization
-- **`Broadcaster`**: Stream your ChucK session live over the network. Run `adc => Broadcaster b => dac; b.format("mp3"); b.start();` and tune in via VLC or browser.
-- **`Spatial3D`**: Binaural panner for headphones, utilizing Head-Related Time/Level Differences (ITD/ILD).
-- **Ambisonics**: First-order B-format spatial encoding (`AmbisonicEncoder`) and decoding (`AmbisonicDecoder`).
-
-#### 🎹 Advanced Audio Analysis (UAna)
-- **`RMS`**: Root Mean Square power analyzer.
-- **`Centroid`**: Spectral brightness analyzer (requires upstream `FFT`).
-- **`IFFT`**: Inverse Fast Fourier Transform for spectral resynthesis.
-- **Phase Support**: `UAnaBlob` and `Complex` now calculate and store phase data (`pvals`).
-
 #### 🔍 Introspection & Documentation
 - **Reflection Docs**: Use `Reflect.doc(obj)` to retrieve class or method documentation strings at runtime.
 - **IDE Hover Docs**: Hover over any keyword, UGen, or method in the editor to see its documentation and signature.
 
 #### 🎨 IDE Enhancements (JavaFX)
 - **MIDI Keyboard Monitor**: Visual feedback for incoming MIDI notes and controllers in the bottom panel.
-- **MIDI Settings Tab**: Configure native library paths, preferred APIs (e.g. JACK vs ALSA), and port filters.
+- **MIDI Settings Tab**: Configure preferred APIs (e.g. JACK vs ALSA) and port filters.
 - **Multi-Tab Editor**: Open and work on multiple `.ck` and `.java` files simultaneously.
 - **Master Controls**: Integrated Global Volume slider, live VU meters, and VM Logical Time display.
-
----
-
-> **MIDI Guide for Musicians:** see [MIDI_GUIDE.md](MIDI_GUIDE.md) for a centralized guide on native drivers, polyphony, and MIDI Learn.
 
 ---
 
@@ -90,33 +76,12 @@ ChucK-Java supports a full-featured CLI that mirrors the original ChucK implemen
 
 ### Usage
 ```bash
-# Via native executable (no JRE needed)
-chuck.exe examples/basic/bar.ck
-
-# Start a persistent VM loop (listens on port 8888)
-chuck.exe --loop
-
-# Add a shred on-the-fly (from another terminal)
-chuck.exe + examples/basic/foo.ck
-
-# Check status, replace a shred, then kill the VM
-chuck.exe ^
-chuck.exe = 2 examples/basic/new_foo.ck
-chuck.exe --kill
+# Via fat JAR
+java --enable-native-access=ALL-UNNAMED -jar target/chuck-java.jar examples/basic/bar.ck
 
 # Launch JavaFX IDE
 mvn javafx:run
-chuck-ide.exe          # self-contained IDE bundle
 ```
-
-### Options
-- `+`, `-`, `=`, `^`, `--kill`: On-the-fly commands (add, remove, replace, status, kill).
-- `--halt` / `-h`: (Default Headless) Exit once all shreds finish.
-- `--loop` / `-l`: Continue running headless (starts the Machine Server).
-- `--silent` / `-s`: Headless mode with audio output disabled.
-- `--verbose:<level>`: Set log level. Level 2 enables real-time RMS monitoring.
-- `--srate:<N>`: Set sampling rate (default: 44100).
-- `--bufsize:<N>`: Set audio buffer size (default: 512).
 
 ---
 
@@ -126,22 +91,9 @@ chuck-ide.exe          # self-contained IDE bundle
 -   **JDK 25** (e.g., Zulu JDK 25)
 -   **Maven**
 
-### 📦 Native Dependencies (Optional - for MIDI support)
-The engine runs without these using JavaSound fallback, but for low-latency and virtual ports, the `rtmidi` library is recommended:
-
-#### **Windows**
--   Requires `rtmidi.dll`.
--   **Where to find it?** Search your computer for music apps like **Bespoke Synth**, **VCV Rack**, or **SuperCollider**. Copy the DLL to a folder (e.g., `C:\rtmidi\`) and point the IDE to it in **Preferences -> MIDI**.
--   **Developer Method:** Use Microsoft's `vcpkg`: `vcpkg install rtmidi:x64-windows`.
-
-#### **macOS**
--   Install via Homebrew: `brew install rtmidi`
--   **Location:** `/opt/homebrew/lib/` (Apple Silicon) or `/usr/local/lib/` (Intel).
--   **Tip:** Find the exact path with `brew ls --verbose rtmidi | grep dylib`.
-
-#### **Linux**
--   Install via your package manager: `sudo apt-get install librtmidi-dev` (on Debian/Ubuntu).
--   **Location:** Usually in `/usr/lib/x86_64-linux-gnu/`.
+### 📦 MIDI Support
+MIDI support is built-in via the **RtMidiJava** library. There are no native dependencies to install manually.
+Ensure you run with `--enable-native-access=ALL-UNNAMED`.
 
 ---
 
